Added implementation for standard and opinion questions
